--- a/index.html
+++ b/index.html
@@ -10,15 +10,26 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-        <title>CDF Grapher</title>
+        <title>CDF Creater</title>
     </head>
     <body>
         <div class="container" style="margin-top: 5vh;">
-            <h1 style="text-align: center;">CDF Grapher</h1>
+            <h1 style="text-align: center;">CDF Creater</h1>
 
             <div style="border: 1px solid #efefef; background-color: #efefef; border-radius: 2px; padding: 0vh 2vw 2vh 2vw;">
                 <p class="lead" style="text-align: center; margin-top: 3vh;">Choose a file:</p>
-                <input id="file-input" style="text-align: center; margin-left: 25%; width: 50%; background-color: white; border-radius: 2px;" type="file">
+                <input id="file-input" style="text-align: center; margin-left: 25%; width: 50%; background-color: white; border-radius: 2px;" type="file" directory multiple webkitdirectory>
+                <div style="display: flex; justify-content: center;" id="loader">
+                    <div class="spinner-border text-success" role="status">
+                        <span class="sr-only">Loading...</span>
+                    </div>
+                </div>
+                <div id="complete-message" class="alert alert-success alert-dismissible fade show" role="alert" style="font-size: 1.5em; text-align: center;;">
+                    Everything completed successfully &#128512;
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
             </div>
 
             <div class="row" style="display: flex; justify-content: center; margin-top: 3vh;">
@@ -26,55 +37,26 @@
             </div>
 
             <div class="row">
-                <div class="alert alert-danger alert-dismissible fade show" role="alert" id="err-msg">
-                    <span id="err-msg-output"></span>
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-            </div>
-
-            <div class="row" style="margin-top: 3vh;">
-
-                <div class="col-sm-12 col-md-6 col-lg-6">
-                    <p class="lead">Choose Column:</p>
-                    
-                    <ul class="list-group" id="headings-list">
-                        <!-- <li class="list-group-item active">Hello</li>
-                        <li class="list-group-item">Hello</li>
-                        <li class="list-group-item">Hello</li> -->
-                    </ul>
-
-                </div>
-
-                <div class="col-sm-12 col-md-6 col-lg-6">
-                    <p class="lead">Script:</p>
-                    <textarea class="code-block" id="script-output" style="width: 100%; height: 100%; border: none; background-color: #222; color: #eee;">
-                    </textarea>
-                </div>
-
-            </div>
-
-            <div class="row" style="margin-top: 10vh;">
-                <div class="col-sm-12 col-md-12 col-lg-12" style="display: flex; justify-content: center;">
-                    <p class="btn btn-lg btn-success" style="width: 50%;" onclick="runScript()" id="run-button">
-                        Run
-                    </p>
-                    <div class="spinner-border text-success" role="status" id="loader">
-                        <span class="sr-only">Loading...</span>
+                <div id="alert-container" class="col-md-12 col-lg-12 col-xl-12 col-sm-12 col-xs-12" style="height: 60vh; overflow-y: scroll;">
+                    <!-- <div class="alert alert-secondary" role="alert">
+                        A simple primary alert—check it out!
                     </div>
+                    <div class="alert alert-warning" role="alert">
+                        A simple primary alert—check it out!
+                    </div>
+                    <div class="alert alert-primary" role="alert">
+                        A simple primary alert—check it out!
+                    </div>
+                    <div class="alert alert-info" role="alert">
+                        A simple primary alert—check it out!
+                    </div>
+                    <div class="alert alert-success" role="alert">
+                        A simple primary alert—check it out!
+                    </div>
+                    <div class="alert alert-danger" role="alert">
+                        A simple primary alert—check it out!
+                    </div> -->
                 </div>
-            </div>
-
-            <div class="alert alert-success alert-dismissible fade show" role="alert" id="alert-msg">
-                Graph created, see below.    
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-
-            <div class="row" style="margin-top: 1vh;">
-                <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12" id="img-output" style="display: flex; justify-content: center;"></div>
             </div>
 
         </div>
